fixed x overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Inter', sans-serif;
-  background-color: #1f2a36; 
-  background-image: radial-gradient(#2c3e50 1px, transparent 1px);
-  background-size: 40px 40px;
-  color: #f0f0f0;
-}
-
 .login-button-wrapper,
 .link-wrapper {
   text-align: center;
@@ -38,6 +28,8 @@ h2 {
 
 .container {
   max-width: 800px;
+  width: 100%;
+  overflow-x: hidden;
   margin: 0 auto;
   padding: 32px 20px;
   display: flex;
@@ -53,6 +45,11 @@ h2 {
   text-align: center;
 }
 
+input, button, .my-input, .my-button {
+  max-width: 100%;
+  width: 100%;
+  box-sizing: border-box;
+}
 
 @media screen and (max-width: 600px) {
   .container {
@@ -107,4 +104,3 @@ h2 {
     font-size: 0.95rem;
   }
 }
-
