--- a/frontend/src/components/input/Input.css
+++ b/frontend/src/components/input/Input.css
@@ -1,7 +1,7 @@
 .my-input {
   display: block;
   width: auto;
-  max-width: 300px;
+  max-width: 400px;
   margin: 12px auto;
   padding: 14px 16px;
   border: none;
